--- a/.github/workflows/synchronise-notebook.yml
+++ b/.github/workflows/synchronise-notebook.yml
@@ -3,8 +3,17 @@ name: 'Copy notebooks from source repos'
 
 on:
   pull_request:
+  push:
+    branches:
+      - main
   schedule:
     - cron:  '56 * * * *'
+  workflow_dispatch:
+    inputs:
+      deployment_spec:
+        description: The name of a copy config file
+        type: string
+        required: false
 
 jobs:
   copy-notebooks:
@@ -36,7 +45,7 @@ jobs:
     - name: Run deployment script
       id: run-changed-yaml
       run: |
-        set -x
+        set -xe
         echo Running the following spec files: $deployment_spec
         for spec in `cat active-deployment-specs.txt`
         do
