Update to sync config

--- a/.github/notebook-source.yaml
+++ b/.github/notebook-source.yaml
@@ -10,12 +10,10 @@ _common_target_repository: &_common_target_repository
 dolly:
   source:
     paths:
-    - expression: '*'
-      path: dolly-instruction-following/
-      recursive: true
+    - path: dolly-instruction-following/
     repository:
       <<: *_gradient_huggingface
-      prefix: notebooks/
+      prefix: dolly-instruction-following/
   target:
     repository:
       <<: *_common_target_repository
