Updated license to pull from examples

--- a/.github/notebook-source.yaml
+++ b/.github/notebook-source.yaml
@@ -2,6 +2,9 @@ _gradient_huggingface: &_gradient_huggingface
   origin: https://github.com/graphcore/Gradient-HuggingFace.git
   ref: main
 
+_examples_internal_repository: &_examples_internal_repository
+  origin: https://github.com/graphcore/examples.git
+  ref: master
 
 _common_target_repository: &_common_target_repository
     origin: notebooks/
@@ -18,14 +21,23 @@ dolly:
     - path: dolly2-instruction-following/Dolly2-an-OSS-instruction-LLM.ipynb
     - path: dolly2-instruction-following/inference.py
     - path: dolly2-instruction-following/requirements.txt
-    - path: LICENSE.md
     repository:
       <<: *_gradient_huggingface
       prefix: dolly2-instruction-following/
   target:
-    renames:
-      ./LICENSE.md: ./LICENSE
     repository:
       <<: *_common_target_repository
       prefix: ./
 
+dolly-license:
+  source:
+    paths:
+      - path: LICENSE
+    repository:
+      <<: *_examples_internal_repository
+      prefix: ./
+  target:
+    renames: {}
+    repository:
+      <<: *_common_target_repository
+      prefix: ./
