--- a/.github/notebook-source.yaml
+++ b/.github/notebook-source.yaml
@@ -11,15 +11,13 @@ dolly:
   source:
     paths:
     - path: dolly2-instruction-following/
-    - path: LICENSE.md
+    - path: LICENSE
     excludes:
     - path: dolly2-instruction-following/OpenAssistant-Pythia-12B-Chatbot.ipynb
     repository:
       <<: *_gradient_huggingface
       prefix: dolly2-instruction-following/
   target:
-    renames:
-      ./LICENSE.md: ./LICENSE
     repository:
       <<: *_common_target_repository
       prefix: ./
